[package]
name = "zacktek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ascii = "1.1.0"
clap = { version = "4.4.6", features = ["derive"] }
crossterm = "0.27.0"
io-arc = "1.0.0"
num_enum = "0.7.0"
serialport = "4.2.2"
thiserror = "1.0.50"
